# clinical-trials-scout

./: .dockerignore  .env.example  .gitignore  Justfile  README.md  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml
app/: config.py  deps.py  drugcentral.py  lifespan.py  main.py  models.py  prompts.py  services.py
app/services/: __init__.py  drugcentral.py  llm.py  pharos.py  sse.py
app/templates/: base.html  chat.html  index.html
